#2177 #2266 add canonical routes to index: test and optimize